crates/adamas-runtime/include/adamas.h


typedef adamas_object *adamas_value;
typedef void (*adamas_release)(adamas_value value);
size_t adamas_stat_allocated(void);
size_t adamas_stat_live(void);
void adamas_stat_reset(void);
int adamas_is_imm(adamas_value value);
adamas_value adamas_imm(intptr_t number);
intptr_t adamas_imm_get(adamas_value value);
adamas_value adamas_con0(uint16_t tag);
adamas_value adamas_unit(void);
adamas_value adamas_alloc(uint16_t tag, size_t fields);
void adamas_free(adamas_value value);
uint16_t adamas_tag(adamas_value value);
uint32_t adamas_rc(adamas_value value);
adamas_value adamas_dup(adamas_value value);
int adamas_is_unique(adamas_value value);
void adamas_drop(adamas_value value, adamas_release release);
adamas_value adamas_drop_reuse(adamas_value value, adamas_release release);
adamas_value adamas_reuse(adamas_value block, uint16_t tag, size_t fields);
adamas_value adamas_field(adamas_value value, size_t index);
void adamas_set_field(adamas_value value, size_t index, adamas_value field);
adamas_value adamas_array_alloc(size_t count, size_t stride);
size_t adamas_array_count(adamas_value array);
size_t adamas_array_stride(adamas_value array);
void *adamas_array_at(adamas_value array, size_t index);
adamas_value adamas_array_get(adamas_value array, size_t index);
void adamas_array_init(adamas_value array, size_t index, adamas_value value);
void adamas_array_put(adamas_value array, size_t index, adamas_value value,
                      adamas_release release);
void adamas_array_fill(adamas_value array, adamas_value value, adamas_release release);
void adamas_array_fill_flat(adamas_value array, const void *bits);
adamas_value adamas_array_take(adamas_value array, size_t index, adamas_release release);
void adamas_array_read(adamas_value array, size_t index, void *out, adamas_release release);
adamas_value adamas_array_writable(adamas_value array, adamas_release release);
void adamas_array_release(adamas_value array, adamas_release release);
adamas_value adamas_region_new(void);
size_t adamas_region_used(adamas_value region);
adamas_value adamas_region_alloc(adamas_value region, const void *bits, size_t size,
                                 size_t align);
size_t adamas_region_last(adamas_value region, adamas_release release);
void adamas_region_read(adamas_value region, size_t at, void *out, size_t size,
                        adamas_release release);
adamas_value adamas_region_write(adamas_value region, size_t at, const void *bits,
                                 size_t size);
void adamas_region_release(adamas_value region);
typedef struct adamas_evidence adamas_evidence;
typedef struct adamas_frame adamas_frame;
typedef struct adamas_kont adamas_kont;
adamas_evidence *adamas_evidence_empty(void);
adamas_evidence *adamas_evidence_extend(const adamas_evidence *parent, uint32_t label,
                                        adamas_frame *handler);
size_t adamas_evidence_count(const adamas_evidence *evidence);
adamas_frame *adamas_evidence_at(const adamas_evidence *evidence, size_t index);
uint32_t adamas_evidence_label_at(const adamas_evidence *evidence, size_t index);
int adamas_evidence_lookup(const adamas_evidence *evidence, uint32_t label,
                           adamas_frame **handler);
adamas_evidence *adamas_evidence_copy(const adamas_evidence *evidence);
void adamas_evidence_suppress(adamas_evidence *evidence, const adamas_frame *handler);
adamas_evidence *adamas_evidence_dup(adamas_evidence *evidence);
void adamas_evidence_drop(adamas_evidence *evidence);
typedef adamas_value (*adamas_code)(adamas_value self, const adamas_evidence *evidence,
                                    adamas_kont *kont, adamas_value argument);
adamas_value adamas_closure(adamas_code code, adamas_release release, uint32_t arity,
                            uint32_t captured);
void adamas_closure_set(adamas_value closure, size_t index, adamas_value field);
adamas_value adamas_closure_get(adamas_value closure, size_t index);
adamas_code adamas_closure_code(adamas_value closure);
uint32_t adamas_closure_missing(adamas_value closure);
size_t adamas_closure_taken(adamas_value closure);
void adamas_closure_release(adamas_value closure);
adamas_value adamas_apply(adamas_value closure, const adamas_evidence *evidence, adamas_kont *kont,
                          adamas_value argument);
typedef struct adamas_segment adamas_segment;
typedef adamas_value (*adamas_frame_code)(adamas_frame *frame, adamas_kont *kont,
                                          adamas_value incoming);
typedef void (*adamas_frame_release)(adamas_frame *frame, adamas_kont *kont);
struct adamas_kont {
    adamas_frame *top;
};
void adamas_kont_init(adamas_kont *kont);
adamas_frame *adamas_kont_push(adamas_kont *kont, uint16_t mark, uint32_t label,
                               adamas_frame_code code, adamas_frame_release release,
                               size_t fields, size_t counted, const adamas_evidence *evidence);
adamas_value *adamas_frame_env(adamas_frame *frame);
size_t adamas_frame_fields(const adamas_frame *frame);
uint16_t adamas_frame_mark(const adamas_frame *frame);
uint32_t adamas_frame_label(const adamas_frame *frame);
adamas_evidence *adamas_frame_evidence(adamas_frame *frame);
adamas_segment *adamas_kont_cut(adamas_kont *kont, adamas_frame *handler);
void adamas_kont_restore(adamas_kont *kont, adamas_segment *segment);
adamas_value adamas_kont_run(adamas_kont *kont, adamas_value value);
adamas_value adamas_kont_abort(adamas_kont *kont);
size_t adamas_segment_depth(const adamas_segment *segment);
adamas_frame *adamas_segment_base(adamas_segment *segment);
adamas_segment *adamas_segment_copy(const adamas_segment *segment);
void adamas_segment_unwind(adamas_kont *kont, adamas_segment *segment);
adamas_value adamas_segment_value(adamas_segment *segment);
adamas_segment *adamas_segment_of(adamas_value value);
void adamas_resumption_drop(adamas_kont *kont, adamas_value value);